[IMP] Added no-touch selector to tooltips (prevents tooltips on mobile)

--- a/app/assets/stylesheets/briarcliff/_tooltips.scss
+++ b/app/assets/stylesheets/briarcliff/_tooltips.scss
@@ -48,7 +48,7 @@
   min-width: 24em;
 }
 
-[data-title]:hover:after {
+.no-touch [data-title]:hover:after {
   opacity: 1;
   top: 100%;
 }
